* 0.5.1:
  - Resolver server: improve the performance of sharding for a
    noticable speedup processing large batches.
  - Put an upper bound on total pool size to avoid various extreme
    scenarios causing unbounded memory usage.
  - Pool more buffers in the resolver server to reduce dynamic
    allocation.

* 0.5.0:
  - Update to tokio 0.3 aka 1.0
  - Implement timeout logic in the resolver client to deal with the
    case where a resolver server is hung. The rule is, minimum timeout
    15 seconds or 6 microseconds per operation in the batch for reads
    and 12 microseconds per operation in the batch for writes,
    whichever timeout is longer.
  - Limit reads and writes to a maximum batch size to prevent doing
    too much work at once on a tokio worker thread, and reader/writer
    starvation, The max batch sizes are are 1000K ops for readers and
    100K ops for writers. Cleaning up dead publishers are included in
    these limits. Results are flushed back to the client after each
    chunk so that we interact properly with the hang detection feature
    mentioned above.
  - The resolver now uses all cores for reads and writes, and no longer
    uses locking, instead the database is sharded internally with each
    CPU controlling a shard. Batches are hashed by path and sent out
    to their corresponding shard (or all of them in the case of
    e.g. list). Performance for large publishers and/or lots of
    publishers on machines with a lot of cores is vastly improved.
  - Improve a degenerate case in resolver_store when lots of
    publishers publish the same paths. It's still N^2, but the
    constants are much better, and it's now not an issue to get to
    thousands of publishers publishing the same set of paths, probably
    more than you'd ever want in practice.
  - Fix a bug in the resolver client that would cause a long running
    write connection to stop after the heartbeat interval.